export interface LocationId {
  readonly value: string
}
